// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeSpec should render Badge 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-readonly theme-tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-category theme-tc-badge-category"
    >
      Category
    </span>
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon theme-tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="theme-tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon theme-tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="theme-tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with selection handler and select id 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-readonly theme-tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    id="tc-badge-select-select"
    onClick={[Function]}
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render disabled Badge with delete icon and delete id 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-disabled theme-tc-badge-disabled"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={true}
    id="tc-badge-select-delete"
    onClick={undefined}
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
  <span
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    <button
      className="tc-badge-delete-icon theme-tc-badge-delete-icon theme-btn-disabled btn btn-default"
      disabled={true}
      id="tc-badge-delete-delete"
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`BadgeSpec should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge theme-tc-badge tc-badge-selected theme-tc-badge-selected"
  style={undefined}
>
  <button
    className="tc-badge-button theme-tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label theme-tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon theme-tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="theme-tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;
